# treinamento-dbt-core

./: .gitignore  Makefile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
seeds/: stg_ecommerce_customer.csv  stg_ecommerce_orders.csv
