[project]
name = "treinamento-dbt-core"
version = "0.1.0"
description = "Treinamento DBT Core"
authors = [
    {name = "dsilva",email = "daniel.silvamiranda02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.10.10,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
